--- a/style.css
+++ b/style.css
@@ -2,6 +2,24 @@ html {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+body {
+  /* font-family: "PT Serif", serif; */
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 400;
+  color: #000;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
 }
 
 *,
@@ -16,6 +34,28 @@ html {
 
 .header__logo {
   padding: 88px 0 60px;
+}
+
+.menu {
+  border-top: 2px solid #c4c4c4;
+}
+
+.menu__list {
+  display: flex;
+  justify-content: center;
+}
+
+.menu__list-item {
+  width: 300px;
+}
+
+.menu__list-link {
+  font-size: 24px;
+  line-height: 28px;
+  color: #888;
+  max-width: 300px;
+  display: block;
+  padding: 34px 10px 38px;
 }
 
 /* .logo {
