--- a/style.css
+++ b/style.css
@@ -155,3 +155,47 @@ a {
   left: 12px;
   top: 28px;
 }
+
+.popular__title {
+  background-color: black;
+  color: white;
+  font-family: "PT Serif", serif;
+  font-size: 48px;
+  text-align: center;
+  line-height: 64px;
+  font-weight: normal;
+  padding: 18px 15px;
+}
+
+.container {
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.popular__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 200px;
+  margin-top: 100px;
+}
+
+.popular__item {
+  width: 280px;
+  text-align: center;
+}
+
+.popular__item-title {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 24px;
+  color: #888;
+}
+
+.popular__link {
+  width: 150px;
+  background-color: #c4c4c4;
+  color: white;
+  padding: 14px 50px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 18px;
+}
