--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ a {
 .about__inner {
   display: flex;
   justify-content: space-between;
+  /* gap: 92px; */
 }
 
 .our-managers__items {
@@ -321,6 +322,7 @@ a {
   margin-bottom: 27px;
   margin-top: 0;
   text-align: center;
+  font-weight: normal;
 }
 
 .our-managers__img {
@@ -331,6 +333,7 @@ a {
   width: 120px;
   text-align: center;
   padding: 0;
+  color: white;
 }
 
 .our-managers__btn {
@@ -342,4 +345,41 @@ a {
   cursor: pointer;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 18px;
+}
+
+.blog {
+  width: 411px;
+}
+
+.blog__list {
+  margin-top: 47px;
+  padding-left: 0;
+}
+
+.blog__item {
+}
+
+.blog__link {
+  line-height: 18px;
+  color: white;
+  margin-bottom: 28px;
+  display: inline-block;
+  padding-left: 67px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 18px;
+  position: relative;
+}
+
+.blog__link::before {
+  background-image: url("/images/arrow-white.svg");
+  content: "";
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  left: 0;
+  top: -7px;
+}
+
+.reviews {
+  width: 300px;
 }
