--- a/style.css
+++ b/style.css
@@ -178,6 +178,7 @@ a {
   justify-content: space-between;
   margin-bottom: 200px;
   margin-top: 100px;
+  flex-wrap: wrap;
 }
 
 .popular__item {
@@ -461,6 +462,16 @@ a {
   text-align: center;
   padding: 3px 0 5px;
 }
+@media (max-width: 1250px) {
+  .popular__item {
+    width: 50%;
+    margin-bottom: 50px;
+  }
+  .popular__img {
+    width: 400px;
+    height: 400px;
+  }
+}
 
 @media (max-width: 850px) {
   .search__form {
@@ -475,6 +486,10 @@ a {
     width: 60%;
     padding: 23px 187px 23px 15px;
   }
+  .popular__img {
+    width: 280px;
+    height: 280px;
+  }
 }
 @media (max-width: 768px) {
   .menu__list {
@@ -487,6 +502,9 @@ a {
   }
   .slider__item {
     height: 50vh;
+  }
+  .popular__item {
+    width: 100%;
   }
 }
 @media (max-width: 600px) {
